--- a/css/layout.css
+++ b/css/layout.css
@@ -20,7 +20,8 @@ body{
 	font-size:13px;
 	font-family:Times, serif;
 	color: #979797;
-	background-color:#333333;
+	
+	height: 100%;
 	}
 
 img{margin:0; padding:0; border:none;}
@@ -64,7 +65,14 @@ div.wrapper h1, div.wrapper h2, div.wrapper h3, div.wrapper h4, div.wrapper h5, 
 	}
 
 .row1, .row2{color:#979797; background-color:#064db4;}
-.row3{color:#000; background-color:#FFFFFF; border-top:1px solid #FFFFFF; border-bottom:5px solid #FFFFFF;}
+.row3{
+	color:#000; 
+	background-color:#FFFFFF; 
+	border-top:1px solid #FFFFFF; 
+	border-bottom:5px solid #FFFFFF;
+	margin: 0 auto;
+	height: 100%;
+}
 .row3 a{color:#064db4; background-color:#FFFFFF;}
 .row4{padding:30px 0;}
 
@@ -72,9 +80,12 @@ div.wrapper h1, div.wrapper h2, div.wrapper h3, div.wrapper h4, div.wrapper h5, 
 
 #header, #container, #footer, #copyright{
 	position:relative;
-	margin:0 auto 0;
+	margin:0 auto -10px;;
 	display:block;
 	width:960px;
+	min-height: 100%;
+    height: auto;
+	height: 100%;
 	}
 
 /* ----------------------------------------------Header-------------------------------------*/
@@ -101,7 +112,14 @@ div.wrapper h1, div.wrapper h2, div.wrapper h3, div.wrapper h4, div.wrapper h5, 
 
 /* ----------------------------------------------Content-------------------------------------*/
 
-#container{padding:30px 0; line-height:1.6em;}
+#container{
+	padding:30px 0; 
+	line-height:1.6em;
+	min-height:100%;
+  	height: auto !important;
+  	height: 100%; /*IE6不识别min-height*/
+  	position: relative;
+}
 
 #container h1, #container h2, #container h3, #container h4, #container h5, #container h6{
 	background-color:#FFFFFF;
@@ -281,7 +299,15 @@ div.wrapper h1, div.wrapper h2, div.wrapper h3, div.wrapper h4, div.wrapper h5, 
 
 /* ----------------------------------------------Footer-------------------------------------*/
 
-#footer{line-height:1.6em; background:url("../images/footer_bg.gif") 550px 0 repeat-y;}
+#footer{
+	line-height:1.6em; 
+	background:url("../images/footer_bg.gif") 550px 0 repeat-y;
+	position:absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px;/*脚部的高度*/
+    clear:both;
+}
 
 #footer a{
 	color:#979797;
