--- a/Canvas/css/style.css
+++ b/Canvas/css/style.css
@@ -109,11 +109,36 @@ table.calendar thead tr {
     padding-right:0;
     padding-top: 7px;
     line-height: 50%;
+    line-height: 20px;
 }
 
 
 
 
+.cardBox {
+    width: 200px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    text-align: center;
+    float: left;
+    margin-right: 10px;
+    padding: 5px;
+    padding-top: 15px;
+}
 
+.headerBox {
+    color: #fff;
+    padding: 10px;
+    font-size: 15px;
+    height: 100px;
+}
 
+.bodyBox {
+    padding: 10px;
+    font-size: small;
+    text-align: left;
+}
+
+.bodyBox p {
+    margin-left: 5px;
+}
 
