--- a/index/css/sy-menu2.css
+++ b/index/css/sy-menu2.css
@@ -143,3 +143,43 @@
 .txtList5 li.last .txtList5-m1 .txt1 {
     border-bottom: 0px;
 }
+
+
+/*----------------------------LIST2-------------------------------------*/
+
+.SLLvertical-menu {
+    width:100%;
+	list-style-type:none;
+}
+.SLLvertical-menu .title{
+	font-size: 18px;
+	font-weight:bold;
+	color:#B01F24;
+	text-align: left;
+	font-family: 微软雅黑;
+	line-height: 40px;
+	border-bottom: 1px solid #d9d9d9;
+}
+.SLLvertical-menu a{
+    background-color: #eee;
+    color: black;
+    display: block;
+    padding: 12px;
+    text-decoration: none;  
+	font-size: 18px;
+    font-family: "RobotoCondensedBold";
+}
+.SLLvertical-menu br{
+	line-height:10px;
+}
+
+.SLLvertical-menu a:hover {
+    background-color: #ccc;
+	color: #013f88;
+}
+
+.SLLvertical-menu:hover .txt h3 a {
+    /* color: #095ab9; */
+    color: red;
+	background-color: #ccc;
+}
