--- a/css/layout.css
+++ b/css/layout.css
@@ -75,9 +75,6 @@ div.wrapper{
 	color:white;
 }
 
-
-
-
 /* ----------------------------------------------Content-------------------------------------*/
 
 #container{
@@ -92,7 +89,7 @@ div.wrapper{
 #content{
 	display:block;
 	float:left;
-	width:1100px;
+	width:100%;
 
 	}
 /* ----------------------------------------------Column-------------------------------------*/
