--- a/css/layout.css
+++ b/css/layout.css
@@ -1,201 +1,105 @@
-body{
+/**
+ * @file layout.css
+ * @author JhangQiu
+ * @brief 
+ * @version 0.1
+ * @date 2023-05-06
+ * 
+ * @copyright Copyright (c) 2023
+ * 
+ */
+
+
+ body{
 	margin:0;
 	padding:0;
 	font-size:13px;
-	font-family:Times, serif;
+	font-family:Arial, Helvetica, sans-serif;
 	color: #979797;
 	height: 100%;
 	background-color:#F8F8F8 ;
 	}
-.justify{text-align:justify;}
-.bold{font-weight:bold;}
-.center{text-align:center;}
-.right{text-align:right;}
-.nostart{list-style-type:none; margin:0; padding:0;}
+a {	text-decoration: none;	}
 
-.clear:after{content:"."; display:block; height:0; clear:both; visibility:hidden; line-height:0;}
-.clear{display:inline-block;}
-html[xmlns] .clear{display:block;}
-* html .clear{height:1%;}
-
-a{outline:none; text-decoration:none;}
-
-.fl_left{float:left;}
-.fl_right{float:right;}
-
-.imgholder, .imgl, .imgr{padding:4px; border:1px solid #D8D8D8; text-align:center;}
-.imgl{float:left; margin:0 15px 15px 0; clear:left;}
-.imgr{float:right; margin:0 0 15px 15px; clear:right;}
-
-/* ----------------------------------------------Wrapper-------------------------------------*/
+/* ----------------------------------------------header-------------------------------------*/
 
 div.wrapper{
 	display:block;
 	width:100%;
-	text-align:left;
 	}
 
-.row1{
-	color:#979797;
+.header{
+	position:relative;
+	margin:0 auto -10px;
+	display:block;
+	width:90%;
+	height:150%;
+	line-height: normal;
+	padding-left:10px;
+	padding-right:40px;
+	padding-top: 20px;
+	padding-bottom: 40px;
+}
+
+.row1{ 
+	color:#F8F8F8;
 	background-color:#F8F8F8;
-	background-image: linear-gradient(#404040,white);
+	background-image: linear-gradient(#404040,#F8F8F8);
 	position:fixed;
 	_position:absolute;
 	top:0
 }
 
-.row3{
-	color:#000; 
-	background-color:#FFFFFF; 
-	border-top:1px solid #FFFFFF; 
-	border-bottom:5px solid #FFFFFF;
-	margin: 0 auto;
-	height: 100%;
+#headerimg{
+	width:35%;
+	word-break: break-all;
+	text-align: left;
 }
 
-/* ----------------------------------------------Generalise-------------------------------------*/
+.headertext{
+	width:65%;
+	word-break: break-all;
+	text-align: right;
+}
 
-#header, #container, #footer, #copyright{
-	position:relative;
-	margin:0 auto -10px;
-	display:block;
-	width:95%;
-	height:100%;
-	padding-left:40px;
-	}
-
-/* ----------------------------------------------Header-------------------------------------*/
-#header{
-	padding:25px 0 30px 0;
+.headertext table{
+	display: inline-block;
 }
 
 #time{
 	font-family:微软雅黑;
-	font-size: medium;
+	font-size: small;
 	color:white;
 }
 
+div.h_text{
+	font-family:微软雅黑;
+	font-size: small;
+	color: white;
+}
+
+
 /* ----------------------------------------------Content-------------------------------------*/
 
-#container{
-	padding:30px 0; 
-	line-height:1.6em;
-	min-height:100%;
-  	height: auto !important;
-  	height: 100%; /*IE6不识别min-height*/
-  	position: relative;
+.clear{
+	display:inline-block;
+}
+
+.clear:after{
+	content:"."; 
+	display:block; 
+	height:0; 
+	clear:both; 
+	visibility:hidden; 
+	line-height:0;
 }
 
 #content{
-	display:block;
-	float:left;
 	width:100%;
-
-	}
-/* ----------------------------------------------Column-------------------------------------*/
-
-#column{
-	display:block;
-	float:right;
-	width:250px;
-	}
-
-#column .holder, #column #featured{
-	display:block;
-	width:250px;
-	margin-bottom:30px;
-	}
-
-#column .holder h2.title{
-	display:block;
-	width:100%;
-	height:65px;
-	margin:0;
-	padding:15px 0 0 0;
-	font-size:20px;
-	text-transform:none;
-	line-height:normal;
-	border-bottom:1px dotted #999999;
-	}
-
-#column .holder h2.title img{
-	float:left;
-	margin:-15px 8px 0 0;
-	padding:5px;
-	border:1px solid #999999;
-	}
-
-/* Featured Block */
-
-#column #featured ul, #column #featured h2, #column #featured p{
-	margin:0;
-	padding:0;
-	list-style:none;
-	color:#666666;
-	}
-
-#column #featured a{
-	color:#896C50;
-	}
-
-#column #featured li{
-	display:block;
-	width:80%;
-	margin:0;
-	padding:20px 25px;
-	color:#666666;
-	}
-
-#column #featured li p.imgholder{
-	display:block;
-	width:80%;
-	height:90px;
-	margin:20px 0 15px 0;
-	}
-
-#column #featured li h2{
-	margin:0;
-	padding:0 0 8px 0;
-	font-weight:normal;
-	font-family:Georgia, "Times New Roman", Times, serif;
-	line-height:normal;
-	border-bottom:1px dotted #999999;
-	}
-
-
-#column .latestnews{
-	display:block;
-	width:100%;
-	margin:0;
-	padding:0;
-	list-style:none;
-	}
-
-#column .latestnews li{
-	display:block;
-	width:100%;
-	height:99px;
-	margin:0 0 11px 0;
-	padding:0 0 21px 0;
-	border-bottom:1px dotted #C7C5C8;
-	overflow:hidden;
-	}
-
-#column .latestnews li.last, #column .last{
-	margin-bottom:0;
-	}
-
-#column .latestnews p{
-	display:inline;
-	}
-
-#column .latestnews img{
-	float:left;
-	margin:0 10px 0 0;
-	padding:4px;
-	border:1px solid #C7C5C8;
-	clear:left;
-	}
+	padding-left: 20px;
+	padding-right: 20px;
+	line-height: normal;
+}
 
 /*-------------------------vertical-menu------------------------------------------------------*/
 .vertical-menu {
@@ -222,7 +126,9 @@ div.wrapper{
     margin-bottom: 0.05rem;
 	text-align: center;
 	left: 0%;
-	
+	padding-bottom: 60px;
+	padding-top: 30px;
+	line-height: 30px;
   }
   .sy-tit .en {
     font-size:60px;
@@ -231,7 +137,9 @@ div.wrapper{
 	position:absolute;
 	font-weight: bold;
 	text-align: center;
+
   }
+
   .sy-tit .tit {
     position: absolute;
     font-size: 28px;
@@ -253,9 +161,10 @@ div.wrapper{
     margin-left: 0.3rem;
 	font-family: 微软雅黑;
 	font-size: medium;
-	text-align: center;
+	float:right;
 	
   }
+
 
   .sy-more2:hover{
     display: block;
@@ -269,13 +178,42 @@ div.wrapper{
     margin-left: 0.3rem;
 	font-family: 微软雅黑;
 	font-size: medium;
-	text-align: center;
   }
 
-/*---------------------------------------------LIST2----------------------------------------*/
+  .title_brief{
+	width: 60%; 
+	font-size: medium;
+	font-family: 微软雅黑;
+	text-align:center;
+	color: #01478e;
+	font-style: italic;
+  }
+
+  
+
+/*---------------------------------------------download_menu----------------------------------------*/
+
+.download_subtitle{
+	font-size: 18px;
+	font-weight:bold;
+	color:#B01F24;
+	text-align: left;
+	font-family: 微软雅黑;
+	line-height: 30px;
+	border-bottom: 1px solid #d9d9d9;
+}
+
 .LLvertical-menu {
     width:100%;
 	list-style-type:none;
+}
+
+.LLvertical-menu ul{
+   list-style-type:none;
+}
+
+.LLvertical-menu li{
+    padding-top:10px;
 }
 .LLvertical-menu .title{
 	font-size: 18px;
@@ -297,7 +235,7 @@ div.wrapper{
     font-family: "RobotoCondensedBold";
 }
 .LLvertical-menu br{
-	line-height:10px;
+	line-height:2px;
 }
 
 .LLvertical-menu a:hover {
@@ -460,75 +398,84 @@ div.wrapper{
     border-bottom: 0px;
 }
 
-/* ----------------------------------------------Footer-------------------------------------*/
-
-#footer{
-	line-height:1.6em; 
-	background:url("../images/footer_bg.gif") 550px 0 repeat-y;
-	position:absolute;
-    bottom: 0;
-    width: 100%;
-    height: 60px;/*脚部的高度*/
-    clear:both;
+@media screen and (max-width:1220px) {
+    
 }
 
-#footer a{
-	color:#979797;
-	background-color:#333333;
-	}
+@media screen and (max-width:768px) {
+    
+    .txtList5 li {
+        width: 50%;
+    }
+}
 
-#footer h2{
-	color:#FFFFFF;
-	background-color:#333333;
-	font-weight:bold;
-	font-style:normal;
+@media screen and (max-width:500px) {
+    
+    .txtList5 li {
+        /*width: 100%;*/
+		width:50%;
+		padding:0 5px 10px 0;
+    }
+	.txtList5-m1 .date{
+		margin-right:5px;
+		width: 45px;
+		height: 50px;
 	}
-
-#footer ul{
-	margin:0;
-	padding:0;
-	list-style:none;
+	.txtList5-m1 .date p{
+		padding-bottom:0;
 	}
-
-#footer address{
-	font-style:normal;
+	.txtList5-m1 .date h3{
+		font-size:20px;
 	}
+	.txtList5-m1 .txt1{
+		padding-top:0;
+	}
+	.txtList5-m1 .txt1 h3 a {
+		height: 55px;
+		font-size: 14px;
+		-webkit-line-clamp: 3;
+	}
+}
 
-#footer .footbox{
-	display:block;
-	float:left;
+/*-------------------CopyRight-----------------------*/
+
+
+.CopyRightZone{
+	background-color:#F8F8F8;
+	padding-bottom: 0px;
+	padding-top: 30px;
+}
+
+.CopyRight{
+	background-color:#023474;
+	font-family:Arial, Helvetica, sans-serif; 
+	text-align: center;
+	color: white; 
+	font-size: small;
+	padding-bottom: 10px;
+	padding-top: 20px;
+}
+
+.CopyRight table{
 	width:100%;
-	margin-right:30px;
-	}
+	border: 0;
+	margin: auto;
+	background-color:#023474;
+	padding-left: 30px;
+	padding-right: 30px;
+}
 
-#footer #social{
-	margin-bottom:20px;
-	}
+.cpy_details{
+	word-break: break-all; 
+	font-size: 14; 
+	line-height: 20px;
+	width: 50% ;
+	text-align: left;
+}
 
-#footer #social ul{
-	margin:20px 0 0 0;
-	}
-
-#footer #social li{
-	display:inline;
-	margin-right:15px;
-	}
-
-#footer .last{margin:0;}
-
-/* ----------------------------------------------Copyright-------------------------------------*/
-
-#copyright{
-	padding:15px 0;
-	border-top:1px solid #979797;
-	}
-
-#copyright p{
-	margin:0;
-	padding:0;
-	}
-
-#copyright, #copyright a{
-	color:#979797;
-	background-color:#333333;
-	}
+.cpy_link{
+	word-break: break-all; 
+	font-size: 14; 
+	line-height: 20px; 
+	color: white;
+}
