--- a/css/layout.css
+++ b/css/layout.css
@@ -398,9 +398,7 @@ div.h_text{
     border-bottom: 0px;
 }
 
-@media screen and (max-width:1220px) {
-    
-}
+@media screen and (max-width:1220px) {  }
 
 @media screen and (max-width:768px) {
     
