--- a/css/layout.css
+++ b/css/layout.css
@@ -550,6 +550,7 @@ ul.txtList5 {
 	ul.txtList5 {
 		text-align: center;
 		padding-left: 0px;
+        padding-right: 0px;
 	}
 
     .txtList5 li {
