--- a/index/css/branch-sy.css
+++ b/index/css/branch-sy.css
@@ -13,26 +13,36 @@
     font-weight: 500;
     color: black;
     text-decoration: none;
- }
+}
+
+/*--------------------main_content--------------------*/
+
+div.main_content_branch{
+	width: 90%;
+   float: left;
+	padding-left: 40px;
+	padding-bottom: 40px ;
+}
+
+
 
 /*---------------------------------------------title----------------------------------------*/
 .sy-tit2 {
    position: relative;
    margin-bottom: 0.05rem;
-   text-align: center;
+   text-align: left;
    left: 0%;
    padding-bottom: 60px;
    padding-top: 30px;
    line-height: 30px;
  }
+
  .sy-tit2 .en {
    font-size:60px;
    color: rgba(215, 218, 219, 0.15);
    font-family:Arial, Helvetica, sans-serif;
    position:absolute;
    font-weight: bold;
-   text-align: center;
-
  }
 
 .sy-tit2 .tit {
@@ -41,16 +51,7 @@
    font-weight:bold;
    color: #023474;
    font-family: 微软雅黑;
-  
 }
-
-
-
-
-
-
-
-
 
  /*------------------------location-----------------------------------------*/
 
@@ -77,6 +78,68 @@ img.location_img{
    padding-bottom: 0px;
    vertical-align:middle;
 }
+/*---------------------News---------------------*/
+
+.configuration{
+   width:65%;
+   margin: auto;
+}
+
+.news_title{
+   font-size:28px;
+   color: black;
+   font-family: 微软雅黑;
+   text-align:center;
+   padding: 10px;
+}
+
+.news_time{
+   color:black;
+   font-size: 16px;
+   font-family: 微软雅黑;
+   text-align: center;
+   line-height: 40px;
+   padding-bottom: 40px;
+}
+
+table.new_tb-ver1{
+   width: 80%;
+   font-size: large;
+   margin: 0 auto;
+}
+
+div.news_family_version_1{
+   font-family: 华文仿宋;
+   color: black;
+   font-size: large;
+}
+
+.extra_file {
+   font-size: 16px;
+   font-family: 微软雅黑;
+   text-decoration: none;
+   color: black;
+   padding-top: 30px;
+   line-height: 20px;
+}
+
+.line{
+   line-height: normal;
+   color: black;
+   padding-bottom: 10px;
+}
+
+.extra_file a{
+   font-size: 16px;
+   font-family: 微软雅黑;
+   text-decoration: none;
+   color: blue;
+}
+
+
+
+
+
 
 /*-------------------adoption-------------------*/
 
@@ -101,6 +164,16 @@ img.location_img{
 
 @media screen and (max-width:500px) {
 
+   
+   div.main_content_branch{
+		padding-left: 20px;
+		padding-right: 20px;
+		padding-bottom: 20px ;
+	}
+
+   .configuration{ width:100%; }
+
+   table.new_tb-ver1{ width: 100%; }
    img.location_img{ width: 20px; }
    .sy-tit2 .en {
 		font-size:40px;
