--- a/index/css/layout.css
+++ b/index/css/layout.css
@@ -1,370 +1,712 @@
-/*
-Template Name: Education Board
-File: Layout CSS
-Author: OS Templates
-Author URI: http://www.moobnn.com/
-Licence: <a href="#">Website Template Licence</a>
-*/
+/**
+ * @file layout.css
+ * @author computersicencekaoyan
+ * @brief 
+ * @version 0.1
+ * @date 2023-05-06
+ * 
+ * @copyright Copyright (c) 2023
+ * 
+ */
 
-@import url(navi.css);
-@import url(forms.css);
-@import url(tables.css);
-@import url(homepage.css);
-@import url(gallery.css);
-@import url(portfolio.css);
-@import url(featured_slide.css);
 
-body{
+ body{
 	margin:0;
 	padding:0;
 	font-size:13px;
-	font-family:Times, serif;
+	font-family:Arial, Helvetica, sans-serif;
 	color: #979797;
 	height: 100%;
+	background-color:#F8F8F8 ;
 	}
 
-img{margin:0; padding:0; border:none;}
-.justify{text-align:justify;}
-.bold{font-weight:bold;}
-.center{text-align:center;}
-.right{text-align:right;}
-.nostart{list-style-type:none; margin:0; padding:0;}
+a {	text-decoration: none;	}
 
-.clear:after{content:"."; display:block; height:0; clear:both; visibility:hidden; line-height:0;}
-.clear{display:inline-block;}
-html[xmlns] .clear{display:block;}
-* html .clear{height:1%;}
-
-a{outline:none; text-decoration:none;}
-
-.fl_left{float:left;}
-.fl_right{float:right;}
-
-.imgholder, .imgl, .imgr{padding:4px; border:1px solid #D8D8D8; text-align:center;}
-.imgl{float:left; margin:0 15px 15px 0; clear:left;}
-.imgr{float:right; margin:0 0 15px 15px; clear:right;}
-
-/* ----------------------------------------------Wrapper-------------------------------------*/
+/* ----------------------------------------------header-------------------------------------*/
 
 div.wrapper{
 	display:block;
 	width:100%;
-	text-align:left;
+	text-decoration: none;
 	}
 
-div.wrapper h1, div.wrapper h2, div.wrapper h3, div.wrapper h4, div.wrapper h5, div.wrapper h6{
-	margin:0 0 15px 0;
-	padding:0;
-	font-size:16px;
-	font-weight:normal;
-	font-style:T;
-	line-height:normal;
-	color:#333333;
-	background-color:transparent;
-	}
-
-.row1, .row2{color:#979797; background-color:#064db4;}
-.row3{
-	color:#000; 
-	background-color:#FFFFFF; 
-	border-top:1px solid #FFFFFF; 
-	border-bottom:5px solid #FFFFFF;
-	margin: 0 auto;
-	height: 100%;
-}
-.row3 a{color:#064db4; background-color:#FFFFFF;}
-.row4{padding:30px 0;}
-
-/* ----------------------------------------------Generalise-------------------------------------*/
-
-#header, #container, #footer, #copyright{
-	position:relative;
-	margin:0 auto -10px;;
+.header{
+	position:absolute;
 	display:block;
-	width:960px;
-	min-height: 100%;
-    height: auto;
-	height: 100%;
-	}
+	width: 100%;
+	line-height: normal;
+	padding-left:40px;
+	padding-right:40px;
+	padding-top: 20px;
+	padding-bottom: 40px;
+	background: url('../image/head-bg.png') center repeat-x;
+	background-size: auto 100%;
+	text-decoration: none;
+}
 
-/* ----------------------------------------------Header-------------------------------------*/
+.row1{ 
+	color:#F8F8F8;
+	background-color:#F8F8F8;
+	position:fixed;
+	_position:absolute;
+	top:0
+}
 
-#header{padding:25px 0 30px 0;}
+#headerimg{
+	width:35%;
+	word-break: break-all;
+	text-align: left;
+}
 
-#header h1, #header p, #header ul{
-	margin:0;
-	padding:0;
-	list-style:none;
-	line-height:normal;
-	}
+.CSMIE_img_header{
+	width: 400px;
+}
 
-#header h1{font-size:26px; font-variant:small-caps; font-style:normal;}
-#header h1 a{color:#ffffff; background-color:#064db4;}
+.headertext{
+	width:65%;
+	word-break: break-all;
+	text-align: right;
+	padding-right:100px;
+}
 
-#header p{font-size:12px;}
-#header p a{color:#fff; background-color:#064db4;}
+.headertext table{ display: inline-block; }
 
-#header .fl_left, #header .fl_right{margin-bottom:15px;}
-#header .fl_right{margin-top:13px;}
+#time{
+	font-family:微软雅黑;
+	font-size: medium;
+	color:white;
+}
 
-#header .fl_right p{float:left; margin:5px 50px 0 0;}
+div.h_text{
+	font-family:微软雅黑;
+	font-size: medium;
+	color: white;
+	line-height: 40px;
+}
+
+.vertical-line{
+	display: inline-block;
+}
+
 
 /* ----------------------------------------------Content-------------------------------------*/
 
-#container{
-	padding:30px 0; 
-	line-height:1.6em;
-	min-height:100%;
-  	height: auto !important;
-  	height: 100%; /*IE6不识别min-height*/
-  	position: relative;
+.clear{
+	display:inline-block;
 }
 
-#container h1, #container h2, #container h3, #container h4, #container h5, #container h6{
-	background-color:#FFFFFF;
-	margin:0 0 15px 0;
-	padding:0 0 10px 0;
-	border-bottom:1px solid #D8D8D8;
-	}
+.clear:after{
+	content:"."; 
+	display:block; 
+	height:0; 
+	clear:both; 
+	visibility:hidden; 
+	line-height:0;
+}
 
-#container .readmore{
-	display:block;
+.content{
 	width:100%;
-	text-align:right;
-	line-height:normal;
-	}
+	line-height: normal;
+	position: relative;
+}
 
-#content{
-	display:block;
-	float:left;
-	width:630px;
-	}
+div.main_content{
+	width: 75%;
+    float: left;
+	padding-left: 40px;
+	padding-bottom:40px ;
+}
 
-/* ------Comments-----*/
+/*-------------------------vertical-menu------------------------------------------------------*/
 
-#comments{margin-bottom:40px;}
+div.menu{
+	width: 18%;
+    float: left;
+	padding-top: 40px;
+	padding-left: 30px;
+	
+}
 
-#comments .commentlist{margin:0; padding:0;}
+div.menu_branch{ display: none; }
 
-#comments .commentlist ul{margin:0; padding:0; list-style:none;}
-
-#comments .commentlist li.comment_odd, #comments .commentlist li.comment_even{margin:0 0 10px 0; padding:15px; list-style:none;}
-
-#comments .commentlist li.comment_odd{color:#666666; background-color:#F7F7F7;}
-#comments .commentlist li.comment_odd a{color:#896C50; background-color:#F7F7F7;}
-
-#comments .commentlist li.comment_even{color:#666666; background-color:#E8E8E8;}
-#comments .commentlist li.comment_even a{color:#896C50; background-color:#E8E8E8;}
-
-#comments .commentlist .author .name{font-weight:bold;}
-#comments .commentlist .submitdate{font-size:smaller;}
-
-#comments .commentlist p{margin:10px 5px 10px 0; padding:0; font-weight:normal; text-transform:none;}
-
-#comments .commentlist li .avatar{float:right; border:1px solid #EEEEEE; margin:0 0 0 10px;}
-
-/* ----------------------------------------------Column-------------------------------------*/
-
-#column{
-	display:block;
-	float:right;
-	width:300px;
-	}
-
-#column .holder, #column #featured{
-	display:block;
-	width:300px;
-	margin-bottom:30px;
-	}
-
-#column .holder h2.title{
-	display:block;
-	width:100%;
-	height:65px;
-	margin:0;
-	padding:15px 0 0 0;
-	font-size:20px;
-	text-transform:none;
-	line-height:normal;
-	border-bottom:1px dotted #999999;
-	}
-
-#column .holder h2.title img{
-	float:left;
-	margin:-15px 8px 0 0;
-	padding:5px;
-	border:1px solid #999999;
-	}
-
-#column div.imgholder{
-	display:block;
-	width:290px;
-	margin:0 0 10px 0;
-	}
-
-#column .holder p.readmore{
-	display:block;
-	width:100%;
-	font-weight:bold;
-	text-align:right;
-	line-height:normal;
-	}
-
-/* Featured Block */
-
-#column #featured ul, #column #featured h2, #column #featured p{
-	margin:0;
-	padding:0;
-	list-style:none;
-	color:#666666;
-	background-color:#F7F7F7;
-	}
-
-#column #featured a{
-	color:#896C50;
-	background-color:#F7F7F7;
-	}
-
-#column #featured li{
-	display:block;
-	width:250px;
-	margin:0;
-	padding:20px 25px;
-	color:#666666;
-	background-color:#F7F7F7;
-	}
-
-#column #featured li p.imgholder{
-	display:block;
-	width:240px;
-	height:90px;
-	margin:20px 0 15px 0;
-	}
-
-#column #featured li h2{
-	margin:0;
-	padding:0 0 8px 0;
-	font-weight:normal;
-	font-family:Georgia, "Times New Roman", Times, serif;
-	line-height:normal;
-	border-bottom:1px dotted #999999;
-	}
-
-#container #column .readmore a{
-	display:block;
-	width:100%;
-	margin-top:15px;
-	height:auto;
-	padding-left:0;
-	font-weight:bold;
-	text-align:right;
-	line-height:normal;
-	background:none;
-	}
-
-#column .latestnews{
-	display:block;
-	width:100%;
-	margin:0;
-	padding:0;
-	list-style:none;
-	}
-
-#column .latestnews li{
-	display:block;
-	width:100%;
-	height:99px;
-	margin:0 0 11px 0;
-	padding:0 0 21px 0;
-	border-bottom:1px dotted #C7C5C8;
-	overflow:hidden;
-	}
-
-#column .latestnews li.last, #column .last{
-	margin-bottom:0;
-	}
-
-#column .latestnews p{
-	display:inline;
-	}
-
-#column .latestnews img{
-	float:left;
-	margin:0 10px 0 0;
-	padding:4px;
-	border:1px solid #C7C5C8;
-	clear:left;
-	}
-
-/* ----------------------------------------------Footer-------------------------------------*/
-
-#footer{
-	line-height:1.6em; 
-	background:url("../images/footer_bg.gif") 550px 0 repeat-y;
+.vertical-menu {
+    width:95%;
+	font-size: medium;
+	line-height:30px;
+}
+.vertical-menu a {
+    color: black;
+    display: block;
+    padding: 12px;
+    text-decoration: none;
+    font-family: 微软雅黑;
+    border-bottom: 1px solid #d9d9d9;
+}
+.vertical-menu a:hover{
+    background-color: #ccc;
+}
+.vertical-menu a.active {
+    background-color:#064db4;
+    color: white;
+}
+/*---------------------------------------------title----------------------------------------*/
+.sy-tit {
+    position: relative;
+    margin-bottom: 0.05rem;
+	text-align: center;
+	left: 0%;
+	padding-bottom: 60px;
+	padding-top: 30px;
+	line-height: 30px;
+  }
+  .sy-tit .en {
+    font-size:60px;
+    color: rgba(215, 218, 219, 0.15);
+	font-family:Arial, Helvetica, sans-serif;
 	position:absolute;
-    bottom: 0;
-    width: 100%;
-    height: 60px;/*脚部的高度*/
-    clear:both;
+	font-weight: bold;
+	text-align: center;
+
+  }
+
+  .sy-tit .tit {
+    position: absolute;
+    font-size: 28px;
+	font-weight:bold;
+	color: #023474;
+	font-family: 微软雅黑;
+	
+  }
+
+  td.sy-more2_overall{
+	width: 40%;
+	padding-right: 0px;
+  }
+
+  .sy-more2{
+    display: block;
+    width:70px;
+	height:28px;
+    line-height: normal;
+    border: 1px solid #01478e;
+    color: #01478e;
+    font-size: 0.12rem;
+    text-align: center;
+    border-radius: 0.15rem;
+    margin-left: 0.3rem;
+	font-family: 微软雅黑;
+	font-size: medium;
+	float:right;
+  }
+
+
+  .sy-more2:hover{
+    display: block;
+    background-color:#01478e;
+    line-height: normal;
+    border: 1px solid #01478e;
+    color: white;
+    font-size: 0.12rem;
+    text-align: center;
+    border-radius: 0.15rem;
+    margin-left: 0.3rem;
+	font-family: 微软雅黑;
+	font-size: medium;
+  }
+
+  .title_brief{
+	width: 60%; 
+	font-size: medium;
+	font-family: 微软雅黑;
+	text-align:center;
+	color: #01478e;
+	font-style: italic;
+  }
+
+  
+
+/*---------------------------------------------download_menu----------------------------------------*/
+
+.download_subtitle{
+	font-size: 18px;
+	font-weight:bold;
+	color:#B01F24;
+	text-align: left;
+	font-family: 微软雅黑;
+	line-height: 30px;
+	border-bottom: 1px solid #d9d9d9;
 }
 
-#footer a{
-	color:#979797;
-	background-color:#333333;
-	}
+.LLvertical-menu {
+    width:90%;
+	list-style-type:none;
+    text-align: left;
+}
 
-#footer h2{
-	color:#FFFFFF;
-	background-color:#333333;
+.LLvertical-menu ul{ list-style-type:none; }
+
+.LLvertical-menu li{ padding-top:10px; }
+
+.LLvertical-menu .title{
+	font-size: 18px;
 	font-weight:bold;
-	font-style:normal;
+	color:#B01F24;
+	text-align: left;
+	font-family: 微软雅黑;
+	line-height: 40px;
+	border-bottom: 1px solid #d9d9d9;
+}
+.LLvertical-menu a{
+    background-color: #eee;
+    color: black;
+    display: block;
+    padding: 12px;
+    text-decoration: none;  
+	font-size: 16px;
+    font-family: "RobotoCondensedBold";
+	font-weight: bold;
+}
+.LLvertical-menu br{
+	line-height:2px;
+}
+
+.LLvertical-menu a:hover {
+    background-color: #ccc;
+	color: #013f88;
+}
+
+.LLvertical-menu:hover .txt h3 a {
+    /* color: #095ab9; */
+    color: red;
+	background-color: #ccc;
+}
+
+.cardBox {
+    width:30%;
+    color: #F8F8F8;
+	text-align: center;
+    float: left;
+    margin-right: 20px;
+}
+
+.bodyBox {
+    padding: 10px;
+    font-size: small;
+    text-align: left;
+}
+
+/*-----------------------------------------------TXTLIST------------------------------------*/
+
+ul.txtList5 {
+    display: block;
+    font-size: 0;
+    width: 100%;
+	padding-left: 40px;
+}
+
+.txtList5 li {
+    width: 33%;
+    padding: 10px 0px;
+    padding-right: 3%;
+    display: inline-block;
+    *display: inline;
+    *zoom: 1;
+    letter-spacing: normal;
+    word-spacing: normal;
+    vertical-align: top;
+    -webkit-box-sizing: border-box;
+    -o-box-sizing: border-box;
+    -ms-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+.txtList5-m1 {
+    overflow: hidden;
+    clear: both;
+    padding-bottom: 3px;
+	vertical-align: middle;
+}
+
+.txtList5-m1 .date,
+.txtList5-m1 .txt1 {
+    display: inline-block;
+    *display: inline;
+    *zoom: 1;
+    letter-spacing: normal;
+    word-spacing: normal;
+}
+
+.txtList5-m1 .date {
+    font-size: 0;
+    text-align: center;
+    margin-right: 12px;
+    width: 76px;
+    height: 76px;
+    border-radius: 5px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    overflow: hidden;
+    background-color: #fff;
+    background-size: 14px auto;
+    border: 1px solid #e3e3e3;
+    float: left;
+    padding: 0px;
+    text-align: center;
+}
+
+.txtList5-m1 .date:before {
+    content: "";
+    width: 0;
+    height: 100%;
+    display: inline-block;
+    *display: inline;
+    *zoom: 1;
+    letter-spacing: normal;
+    word-spacing: normal;
+    vertical-align: middle;
+}
+
+.txtList5-m1 .date .k1 {
+    display: inline-block;
+    *display: inline;
+    *zoom: 1;
+    letter-spacing: normal;
+    word-spacing: normal;
+    vertical-align: middle;
+}
+
+.txtList5-m1 .date p {
+    font-size: 17px;
+    line-height:2px;
+    font-family: "RobotoRegular";
+    color: #666;
+}
+
+.txtList5-m1 .date h3 {
+    font-size: 25px;
+	font-weight: bold;
+    font-family: "RobotoCondensedBold";
+    color: #333;
+    line-height: 0px;
+}
+
+.txtList5-m1:hover .date {
+    /* background: #003f88; */
+    background: #B01F24;
+
+}
+
+.txtList5-m1:hover .date p {
+    color: #fff;
+    border-bottom-color: #fff;
+
+}
+
+.txtList5-m1:hover .date h3 {
+    color: #fff;
+}
+
+.txtList5-m1:hover .txt1 h3 a {
+    /* color: #095ab9; */
+    color: #B01F24;
+}
+
+.txtList5-m1 .txt1 {
+    display: block;
+    overflow: hidden;
+    padding-top: 10px;
+    padding-bottom: 2px;
+
+}
+
+.txtList5-m1 .txt1 h3 a {
+    height: 66px;
+    font-size: 18px;
+	font-weight: bold;
+    color: #013f88;
+    font-family: "RobotoCondensedBold";
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+	text-align: left;
+}
+
+.txtList5-m1 .txt1 .ct {
+    padding-top: 10px;
+}
+
+.txtList5-m1 .txt1 .ct p {
+    font-size: 14px;
+    color: #666666;
+    line-height: 24px;
+}
+
+.txtList5 li.last .txtList5-m1 .txt1 {
+    border-bottom: 0px;
+}
+
+/*--------------------------------adaption---------------------------------*/
+
+@media screen and (min-width:1220px) {
+
+    br.h_br{ display: none; }
+	.pic_sy1{ display: block; }
+	.pic_sy2{ display: none;}
+	
+
+
+}
+
+@media screen and (max-width:1220px) {
+
+	
+	br.h_br{ display: none; }
+	img.pic_sy2{ display: none; }
+	img.pic_sy1{ display: block; }
+	#time{ font-size: small; }
+	div.h_text{ font-size: small; }
+
+	div.main_content{
+		width: 70%;
+		padding-left: 25px;
+		padding-right: 25px;
 	}
 
-#footer ul{
-	margin:0;
-	padding:0;
-	list-style:none;
+	div.menu{ width: 20%; }
+
+    .txtList5 li {
+		width:45%;
+		padding:0 10px 10px 0;
+    }
+
+	.download td{
+		width: 50%;
+		padding-left: 10px;
+		padding-right: 10px;
 	}
 
-#footer address{
-	font-style:normal;
+	
+	.cardBox {
+		width: 33%;
+		float: left;
+		margin-right: 0px;
 	}
 
-#footer .footbox{
-	display:block;
-	float:left;
-	width:200px;
-	margin-right:30px;
+	
+}
+
+@media screen and (max-width:768px) {
+    
+    .txtList5 li {
+        width: 50%;
+    }
+
+	.download td{
+		width: 50%;
+		padding-left: 10px;
+		padding-right: 10px;
 	}
 
-#footer #social{
-	margin-bottom:20px;
+	br.h_br{ display: none; }
+	img.pic_sy2{ display: none; }
+
+
+}
+
+@media screen and (max-width:500px) {
+
+	div.content{
+		padding-left: 0px;
+		padding-right: 0px;
+		padding-bottom: 20px ;
 	}
 
-#footer #social ul{
-	margin:20px 0 0 0;
+	div.main_content{
+		width: 100%;
+		float: left;
+		padding-left: 0px;
+		padding-right: 0px;
+		padding-bottom: 20px ;
 	}
 
-#footer #social li{
-	display:inline;
-	margin-right:15px;
+	.header{ padding-left:20px; }
+	.CSMIE_img_header{ width: 200px; }
+	div.h_text{ line-height: 20px; }
+	.headertext{ padding-right:60px; }
+	#time{ display: none; }
+	br.h_br{ display: inline-block; }
+	img.pic_sy1{ display: none; }
+	img.pic_sy2{ display: block; }
+	.vertical-line{ display: none; }
+
+	.sy-tit .en {
+		font-size: 40px;
+		padding-left: 15px;
+	}
+	
+	.sy-tit .tit {
+		font-size: 24px;
+		padding-left: 15px;
 	}
 
-#footer .last{margin:0;}
+	td.sy-more2_overall{ padding-right: 30px; }
 
-/* ----------------------------------------------Copyright-------------------------------------*/
-
-#copyright{
-	padding:15px 0;
-	border-top:1px solid #979797;
+	.sy-more2{ padding-right: 0px; }
+	.title_brief{ display:none;  }
+    
+	ul.txtList5 {
+		text-align: center;
+		padding-left: 0px;
+		
 	}
 
-#copyright p{
-	margin:0;
-	padding:0;
+    .txtList5 li {
+		width:80%;
+		padding:0 0px 0px 0;
+		padding-right: 0px;
+    }
+	.txtList5-m1 .date{
+		padding-top: -5px;
+		margin-right:5px;
+		width: 45px;
+		height: 50px;
 	}
 
-#copyright, #copyright a{
-	color:#979797;
-	background-color:#333333;
+
+	.txtList5-m1 .date p{ padding-bottom:0; }
+	.txtList5-m1 .date h3{ font-size:16px; }
+	.txtList5-m1 .txt1{ padding-top:2px;vertical-align: middle; }
+	.txtList5-m1 .txt1 h3 a {
+		height: 55px;
+		font-size: 14px;
+		-webkit-line-clamp: 2;
 	}
+
+	.cardBox {
+		width:90%;
+		color: #F8F8F8;
+		text-align: center;
+		float: left;
+		margin-right: 20px;
+	}
+
+	.LLvertical-menu {
+		width:95%;
+		list-style-type:none;
+		text-align: left;
+	}
+	
+	div.menu{
+		width: 80%;
+		float: left;
+		padding-top: 0px;
+		padding-bottom: 40px;
+	}
+
+	.vertical-menu { width:95%; }
+
+	div.CopyRightZone{
+		width: 100%;
+		background-color:#023474;
+		display: flex; 
+		padding-top: 20px;
+		padding-left: 0px;
+		padding-right: 0px;
+		padding-bottom: 0px;
+	}
+
+	div.CopyRight{
+		text-align: center;
+		width: 100%;
+		padding-top: 20px;
+		padding-left: 10px;
+		padding-right: 10px;
+		padding-bottom: 20px;
+	}
+
+	div.cpy_details{
+		width: 100%;
+		padding-left: 10px;
+		text-align: center;
+	}
+
+	img.cpy_img{ width: 300px; }
+
+	div.cpy_img2{
+		float: left;
+		width: 100%;
+	}
+
+	div.top{
+		width: 10%;
+		float: right;
+		margin-top: 0px;
+		padding-right: 10px;
+	}
+
+	img.cpy_img_tp{ width: 50px; }
+
+}
+
+/*-------------------CopyRight-----------------------*/
+
+
+.footer{
+	display: flex;
+	width: 100%;
+	background-color:#023474;
+}
+
+.CopyRight{
+	width: 100%;
+	background-color:#023474;
+	font-family:Arial, Helvetica, sans-serif; 
+	text-align: center;
+	color: white; 
+	font-size: small;
+	margin-top: auto;
+	padding-top: 20px;
+	padding-left: 30px;
+	padding-right: 30px;
+	padding-bottom: 10px;
+}
+
+.cpy_details{
+	width: 40%;
+	float: left;
+	padding-left: 50px;
+	word-break: break-all; 
+	font-size: 14; 
+	line-height: 30px;
+	text-align: left;
+	background-color:#023474;
+}
+
+.cpy_link{
+	word-break: break-all; 
+	font-size: 14; 
+	line-height: 20px; 
+	color: white;
+	background-color:#023474;
+}
+
+.cpy_img{
+	width: 400px;
+	background-color:#023474;
+}
+
+.cpy_img2{
+	float: right;
+	width: 55%;
+	background-color:#023474;
+}
+
+.top{
+	width: 5%;
+	float: right;
+	background-color:#023474;
+	margin-top: -90px;
+}
+
+.cpy_img_tp{ width: 50px; }
