--- a/index/css/legal_info.css
+++ b/index/css/legal_info.css
@@ -1,5 +1,5 @@
 div.legal{
-    width:80%;
+    width:90%;
     line-height:normal;
 }
 
@@ -31,6 +31,10 @@ p.text{
 
 
 @media screen and (max-width:500px) {
-    div.legal{ width:100%; }
+    div.legal{ 
+        width: 90%; 
+        padding-left: 20px;
+        padding-right: 10px;
+    }
 
 }
