--- a/Online Course/Homepage/CSS/style.css
+++ b/Online Course/Homepage/CSS/style.css
@@ -110,6 +110,42 @@ td.course-information{
     padding-left: 20px;
 }
 
+.link-list{
+    display: block;
+    list-style-type: disc;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 0px;
+}
+
+.link-list-item{
+    background: #FAFAFA;
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
+    border-bottom-left-radius: 3px;
+    border-bottom-right-radius: 3px;
+    border: 1px solid #C7CDD1;
+    margin-bottom: 10px;
+}
+
+.link-list-item a{
+    color: black;
+    display: block;
+    padding: 10px;
+    padding-left:0px;
+    text-decoration: none;  
+	font-size: 16px;
+    font-family: "RobotoCondensedBold";
+}
+
+.link-list-img{
+    width: 30px;
+    padding: 7px;
+    
+}
+
 .link{
     color: #008ee2;
     text-decoration: none;
@@ -119,6 +155,8 @@ td.course-information{
     color: #008ee2;
     text-decoration: none;
 }
+
+
 /*--------Course Overview------*/
 
 .syllabus-layout{
@@ -325,4 +363,18 @@ td.as-due{
     padding: 5px;
     font-style: italic;
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+/*-----adaption-------*/
+
+@media screen and (max-width:500px) {
+    .link-list-img{
+        width: 20px;
+        padding: auto;
+        padding: 50%;
+    }
+    .link-list-item a{
+        padding: 10px;
+        padding-left: 20px;
+    }
 }
