--- a/Online Course/Homepage/CSS/style.css
+++ b/Online Course/Homepage/CSS/style.css
@@ -130,6 +130,16 @@ td.course-information{
     margin-bottom: 10px;
 }
 
+.link-list-item:hover{
+    background: #eee;
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
+    border-bottom-left-radius: 3px;
+    border-bottom-right-radius: 3px;
+    border: 1px solid #C7CDD1;
+    margin-bottom: 10px;
+}
+
 .link-list-item a{
     color: black;
     display: block;
@@ -140,10 +150,19 @@ td.course-information{
     font-family: "RobotoCondensedBold";
 }
 
+.link-list-item a:hover{
+    color: black;
+    display: block;
+    padding: 10px;
+    padding-left:3px;
+    text-decoration: none;  
+	font-size: 16px;
+    font-family: "RobotoCondensedBold";
+}
+
 .link-list-img{
     width: 30px;
-    padding: 7px;
-    
+    padding: 7px 7px 7px 10px;
 }
 
 .link{
@@ -367,13 +386,50 @@ td.as-due{
 
 /*-----adaption-------*/
 
+@media screen and (max-width:1200px) {
+    .link-list-img{
+        width: 25px;
+        padding: auto;
+        padding: 10px 7px 10px 10px;
+    }
+
+    .link-list-img:hover{
+        width: 25px;
+        padding: auto;
+        padding: 10px 7px 10px 10px;
+    }
+
+    .link-list-item a{
+        padding: 10px;
+        padding-left: 3px;
+
+    } 
+
+    .link-list-item a:hover{
+        padding: 10px;
+        padding-left: 3px;
+    }
+}
+
 @media screen and (max-width:500px) {
     .link-list-img{
         width: 20px;
         padding: auto;
         padding: 50%;
     }
+
+    .link-list-img:hover{
+        width: 20px;
+        padding: auto;
+        padding: 50%;
+    }
+
     .link-list-item a{
+        padding: 10px;
+        padding-left: 20px;
+    } 
+
+    .link-list-item a:hover{
         padding: 10px;
         padding-left: 20px;
     }
