--- a/Online Course/Homepage/CSS/style.css
+++ b/Online Course/Homepage/CSS/style.css
@@ -87,29 +87,56 @@ table.calendar thead tr {
 .bodyBox p {
     margin-left: 5px;
 }
+/*--------button--------*/
 
-/*-------Home-----------*/
-
-.card-header-CSMIE{
-    background-color: #FAFAFA;
-}
-.card-title-CSMIE{
-    font-size: 20px;
-}
-
-.info{
-    border:0;
-    border-spacing:20px;
-    padding-left:80px;
-    font-size: 14px;
-    line-height:20px;
+.btn{
+    background: #FAFAFA;
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
+    border-bottom-left-radius: 3px;
+    border-bottom-right-radius: 3px;
+    border: 1px solid #C7CDD1;
+    margin-bottom: 10px;
+    width: 100%;
 }
 
-td.course-information{
-    text-align: left;
-    padding-left: 20px;
+.btn:hover{
+    background: #eee;
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
+    border-bottom-left-radius: 3px;
+    border-bottom-right-radius: 3px;
+    border: 1px solid #C7CDD1;
+    margin-bottom: 10px;
 }
 
+.btn a{
+    color: black;
+    display: block;
+    padding: 10px;
+    padding-left:0px;
+    text-decoration: none;  
+	font-size: 14px;
+    font-family: "RobotoCondensedBold";
+}
+
+.link-list-item a:hover{
+    color: black;
+    display: block;
+    padding: 10px;
+    padding-left:0px;
+    text-decoration: none;  
+	font-size: 14px;
+    font-family: "RobotoCondensedBold";
+}
+
+.btn-img{
+    width: 20px;
+    padding: 10px 10px 10px 12px;
+}
+
+
+/*------Linklist--------*/
 .link-list{
     display: block;
     list-style-type: disc;
@@ -143,7 +170,7 @@ td.course-information{
 .link-list-item a{
     color: black;
     display: block;
-    padding: 12px;
+    padding: 10px;
     padding-left:0px;
     text-decoration: none;  
 	font-size: 15px;
@@ -153,7 +180,7 @@ td.course-information{
 .link-list-item a:hover{
     color: black;
     display: block;
-    padding: 12px;
+    padding: 10px;
     padding-left:0px;
     text-decoration: none;  
 	font-size: 15px;
@@ -162,7 +189,81 @@ td.course-information{
 
 .link-list-img{
     width: 25px;
-    padding: 12px 12px 12px 15px;
+    padding: 10px 10px 10px 12px;
+}
+
+/*------Filelist-------*/
+.file-list{
+    display: block;
+    list-style-type: disc;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 0px;
+    
+}
+
+.file-list-item{
+    background: #fff;
+    border: 1px solid #C7CDD1;
+    margin-bottom:2px;
+}
+
+.file-list-item:hover{
+    background: #eef7ff;
+    border: 1px solid #C7CDD1;
+    margin-bottom:2px;
+}
+
+.file-list-item a{
+    color: black;
+    display: block;
+    padding: 10px;
+    padding-left:0px;
+    text-decoration: none;  
+	font-size: 15px;
+    font-family: "RobotoCondensedBold";
+    font-weight: bold;
+}
+
+.file-list-item a:hover{
+    color: black;
+    display: block;
+    padding: 10px;
+    padding-left:0px;
+    text-decoration: none;  
+	font-size: 15px;
+    font-family: "RobotoCondensedBold";
+}
+
+.file-list-img{
+    width: 25px;
+    padding: 10px 10px 10px 12px;
+}
+
+
+
+/*-------Home-----------*/
+
+.card-header-CSMIE{
+    background-color: #FAFAFA;
+}
+.card-title-CSMIE{
+    font-size: 20px;
+}
+
+.info{
+    border:0;
+    border-spacing:20px;
+    padding-left:80px;
+    font-size: 14px;
+    line-height:20px;
+}
+
+td.course-information{
+    text-align: left;
+    padding-left: 20px;
 }
 
 
@@ -176,6 +277,14 @@ td.course-information{
     text-decoration: none;
 }
 
+.refer-out-web{
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
+    border-bottom-left-radius: 3px;
+    border-bottom-right-radius: 3px;
+    width: 100%;
+    height: 400px;
+}
 
 /*--------Course Overview------*/
 
@@ -411,6 +520,29 @@ td.as-due{
         padding: 10px;
         padding-left: 3px;
     }
+
+    .file-list-img{
+        width: 25px;
+        padding: auto;
+        padding: 10px 7px 10px 10px;
+    }
+
+    .file-list-img:hover{
+        width: 25px;
+        padding: auto;
+        padding: 10px 7px 10px 10px;
+    }
+
+    .file-list-item a{
+        padding: 10px;
+        padding-left: 3px;
+
+    } 
+
+    .file-list-item a:hover{
+        padding: 10px;
+        padding-left: 3px;
+    }
 }
 
 @media screen and (max-width:500px) {
@@ -432,6 +564,28 @@ td.as-due{
     } 
 
     .link-list-item a:hover{
+        padding: 10px;
+        padding-left: 20px;
+    }
+
+    .file-list-img{
+        width: 20px;
+        padding: auto;
+        padding: 50%;
+    }
+
+    .file-list-img:hover{
+        width: 20px;
+        padding: auto;
+        padding: 50%;
+    }
+
+    .file-list-item a{
+        padding: 10px;
+        padding-left: 20px;
+    } 
+
+    .file-list-item a:hover{
         padding: 10px;
         padding-left: 20px;
     }
